# CareSummaryGen

./: README.md  app.py  instructions_inputs.csv  pyproject.toml  request.py  requirements.txt  store_vector.py
data/: test_sample1.md  test_sample2.md
utils/: check_chromadb.py  llama3_swallow_RAG.py
